<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="itp341.caceres.nicholas.hazardRoomGame.MainBattle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rankingsTextView"
            android:text="@string/rankings"
            android:textSize="22sp"
            android:textColor="#DDFF0000"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:text="@string/add_button"
            android:layout_marginStart="190dp"
            android:background="#DDFF0000"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/rankingsListView"
        android:background="#FFFF00">

    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/battleTextView"
        android:text="@string/battle"
        android:textSize="22sp"
        android:textColor="#DDFF0000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heroOneTextView"
            android:text="@string/hero_one"
            android:textSize="18sp"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heroTwoTextView"
            android:text="@string/hero_two"
            android:textSize="18sp"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"
            android:layout_marginStart="75dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/heroOneSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:entries="@array/hero_names_array" />

        <Spinner
            android:id="@+id/heroTwoSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:entries="@array/hero_names_array" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fightButton"
            android:text="@string/fight_button"
            android:background="#DDFF0000"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/resultsTextView"
            android:text="@string/results"
            android:textSize="22sp"
            android:textColor="#DDFF0000"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="#FFFF00">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/battleLogTextView"
                    android:textSize="22sp"
                    android:textColor="#000000"
                    android:minLines="1"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
